syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "ParentTableNameProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

// database id + table name which will be used to store in child table metadata
message ParentTableName {
  required string project_id = 1;
  required string catalog_name = 2;
  required string database_name = 3;
  required string table_name = 4;
  optional string last_modified_time = 5;
}

message ParentTableNameUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required ParentTableName parentTableName = 1;
}